--- a/index.html
+++ b/index.html
@@ -1,1 +1,191 @@
-这里是bilibili珍藏馆
+﻿<!DOCTYPE html>
+<html style="cursor:default" leftmargin=0 topmargin=0 οncοntextmenu='return false' οndragstart='return false' onselectstart ='return false' οnselect='document.selection.empty()' οncοpy='document.selection.empty()' onbeforecopy='return false' οnmοuseup='document.selection.empty()' ondragstart="return false;" oncontextmenu="return false;">
+<head>
+<meta charset="UTF-8"/>
+<title>首页</title> <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
+<style>
+@font-face {
+   font-family: myFirstFont;
+   src: url(font220418.ttf);
+   font-weight: bold;
+}
+img{border-radius: 0px;}
+html{
+   font-family: myFirstFont;
+}
+#head1{
+width: 100%;
+height: 61px;
+background-color: #1999a2ff;
+vertical-align: middle;
+box-shadow: 0 0 10px #000000;
+}
+#2{margin-left: 31px}
+body{
+background-color: #fff;}
+a{color: white}
+a{text-decoration:none} 
+a:hover{color: yellow}
+#nowin{color: #95ff99}
+
+#play1{
+width: 100%;
+height: 100px;
+background-color: #283848;
+border-width: 5px;;border-radius:0px;
+box-shadow: 0 0 10px #081839;border-color: rgb(8, 18, 39); /* 3 */
+}
+
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.9s;
+  cursor: pointer;
+}
+
+.button2 {
+  background-color: #008CBA; 
+  color: white; 
+  border: 2px solid #008CBA;
+}
+
+.button2:hover {
+  background-color: #008AFF;
+border: 2px solid #008AFF;
+  color: white;
+}
+
+
+.button3 {
+  background-color: #888; 
+  color: white; 
+  border: 2px solid #888;
+cursor:default;
+}
+
+.button3:hover {
+  background-color: #777;
+border: 2px solid #777;
+  color: white;
+}
+
+
+
+
+
+
+#logo{border-radius: 0px}
+</style>
+</head>
+<body>
+
+<div align="center">
+<h1 style="font-size: 62px"><br>欢迎来到哔哩哔哩珍藏馆</h1>
+<br><br><br>
+</div><center style="color:white">
+
+<a href="av5"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">【AMV】Love Story</span>
+
+<br></div></a><br>
+<a href="av7"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">2012地球便当日宣传片</span>
+
+<br>
+</div></a><br><a href="av9"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">[思密达]无敌金馆长.</span>
+
+<br>
+</div></a><br>
+
+<a href="av12"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">音乐与弹幕同步 3.⑤</span>
+
+<br>
+</div></a><br>
+
+<a href="av17"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">【洗脑】【K-ON】循环洗脑用意</span>
+
+<br>
+</div></a><br>
+<a href="av18"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">东方不知道虾米版本的OP</span>
+
+<br>
+</div></a><br>
+
+<a href="av19"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">幻想乡-旅途的终点</span>
+
+<br>
+</div></a><br>
+
+<a href="av20"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">【初音ミク(40mP)】巨大少女</span>
+
+<br>
+</div></a><br>
+<a href="av21"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">琪露诺的完美算术教室</span>
+
+<br>
+</div></a><br>
+<a href="av22"><div id="play1"><br>
+<span id="1" style="font-size: 36px;">咲夜さんとお嬢様でせっこりんらぁん (＞ヮ＜)</span>
+
+<br>
+</div></a><br>
+
+<a href="av23"><div id="play1"><br>
+<span id="1" style="font-size: 38px;">【慎入】被蓝蓝路的七变化洗脑后，兴致很高</span>
+
+<br>
+</div></a><br>
+
+
+<a href="av24"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">多那路多信仰风化曲</span>
+
+<br>
+</div></a><br>
+
+<a href="av25"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">教主 教主 GO MY WAY！</span>
+
+<br>
+</div></a><br>
+
+<a href="av26"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">蓝蓝路的土耳其进行曲</span>
+
+<br>
+</div></a><br>
+
+<a href="av30"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">蓝蓝路的天国与地狱</span>
+
+<br>
+</div></a><br>
+
+<a href="av31"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">美少女伪娘～～～</span>
+
+<br>
+</div></a><br>
+
+<a href="av32"><div id="play1"><br>
+<span id="1" style="font-size: 41px;">【海猫鸣泣之时 散】EP5 OP</span>
+
+<br>
+</div></a><br>
+
+</div>
